# llvm-tutor

./: .gitignore  CMakeLists.txt
include/: CheckBoundary.h  FuncTimer.h  InjectTrampoline.h
inputs/: input_for_func_timer.c  input_for_inject_trampoline1.c  input_for_inject_trampoline2.c
lib/: CMakeLists.txt  CheckBoundary.cpp  FuncTimer.cpp  InjectFuncCall.cpp  InjectTrampoline.cpp
